[package]
name = "bflib"
version = "0.1.1"
edition = "2021"

description = "a BrainFuck-to-Rust transpiler using Rust proc macro."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"