[package]
name = "bflib"
version = "0.1.4"
edition = "2021"

description = "a BrainFuck-to-Rust transpiler using Rust proc macro."
license = "MIT"
repository = "https://github.com/HellOwhatAs/brainfuck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bflib_proc_macro = {version = "0.1.3", path = "./bflib_proc_macro"}